--- a/src/app/componentes/generate-code/generate-code.component.html
+++ b/src/app/componentes/generate-code/generate-code.component.html
@@ -34,6 +34,7 @@
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
       <div class="modal-body">
+
         <div class="containerbuscar">
           <div class="search-container">
             <input class="input form-control" placeholder="Buscar tarea..."
@@ -41,48 +42,53 @@
 
           </div>
           </div>
-        <table class="table table-dark table-striped table-bordered">
-          <thead class="table-light">
-            <tr>
 
-              <th scope="col">Código</th>
-              <th scope="col">Email</th>
-              <!--th-- scope="col">Tipo de Código</!--th-->
-              <!--th scope="col">Username</!--th-->
-              <!--th scope="col">Teléfono</!--th-->
-              <!--th scope="col">Provincia</!--th-->
-              <th scope="col">F.Registro</th>
-              <th scope="col">F.Vencimiento</th>
-              <th scope="col">Vigente</th>
+          <div class="table-responsive">
+            <table class="table table-dark table-striped table-bordered">
+              <thead class="table-light">
+                <tr>
 
-              <th scope="col">Acciones</th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr *ngFor="let item of getPaginatedCodes()">
+                  <th scope="col">Código</th>
+                  <th scope="col">Email</th>
+                  <!--th-- scope="col">Tipo de Código</!--th-->
+                  <!--th scope="col">Username</!--th-->
+                  <!--th scope="col">Teléfono</!--th-->
+                  <!--th scope="col">Provincia</!--th-->
+                  <th scope="col">F.Registro</th>
+                  <th scope="col">F.Vencimiento</th>
+                  <th scope="col">Vigente</th>
 
-              <td>{{ item.code }}</td>
-              <td>{{ item.email }}</td>
-              <!--td>{{ item.tipo }}</td-->
-              <!--td>{{ item.username }}</!--td-->
-              <!--td>{{ item.telefono }}</!--td-->
-              <!--td>{{ item.provincia }}</!--td-->
-              <td>{{ item.fechaRegistro }}</td>
-              <td>{{ item.fechaVencimiento }}</td>
-              <!--td>{{ calculateRemainingTime(item.fechaVencimiento) }}</td-->
-              <td>{{item.remainingTime}}</td>
+                  <th scope="col">Acciones</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr *ngFor="let item of getPaginatedCodes()">
 
-              <td >
-                <div class="flex gap-3">
-                  <button type="button" class="btn btn-warning btn-sm" (click)="editCode(item)">Editar</button>
-                  <button type="button" class="btn btn-danger btn-sm" (click)="confirmDeleteCode(item.code)">Eliminar</button>
-                  <!--button-- type="button" class="btn btn-primary btn-sm" (click)="copyToClipboard(item.code)">Copiar</!--button-->
-                </div>
+                  <td>{{ item.code }}</td>
+                  <td>{{ item.email }}</td>
+                  <!--td>{{ item.tipo }}</td-->
+                  <!--td>{{ item.username }}</!--td-->
+                  <!--td>{{ item.telefono }}</!--td-->
+                  <!--td>{{ item.provincia }}</!--td-->
+                  <td>{{ item.fechaRegistro }}</td>
+                  <td>{{ item.fechaVencimiento }}</td>
+                  <!--td>{{ calculateRemainingTime(item.fechaVencimiento) }}</td-->
+                  <td>{{item.remainingTime}}</td>
 
-              </td>
-            </tr>
-          </tbody>
-        </table>
+                  <td >
+                    <div class="flex gap-3">
+                      <button type="button" class="btn btn-warning btn-sm" (click)="editCode(item)">Editar</button>
+                      <button type="button" class="btn btn-danger btn-sm" (click)="confirmDeleteCode(item.code)">Eliminar</button>
+                      <!--button-- type="button" class="btn btn-primary btn-sm" (click)="copyToClipboard(item.code)">Copiar</!--button-->
+                    </div>
+
+                  </td>
+                </tr>
+              </tbody>
+            </table>
+          </div>
+
+
 
 
       <nav aria-label="Page navigation example">
