--- a/src/app/componentes/login/login.component.html
+++ b/src/app/componentes/login/login.component.html
@@ -6,12 +6,12 @@
     </div>
 
     <div id="ingreso" class="ingreso" style=" box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.897);" *ngIf="!isContentVisible">
-      <div id="ingreso6" style="border-radius: 10px; padding-bottom: 10px;">
+      <!--div-- id="ingreso6" style="border-radius: 10px; padding-bottom: 10px;">
         <h6 class="text-center">PRECIOS DE DICIEMBRE ACTUALIZADOS</h6>
         <p class="text-center" style="font-size: 10px">
           Optimiza tu manera de trabajar. Realiza automáticamente tus presupuestos directamente desde la aplicación con la lista de precios actualizados cada mes. Ahorrá tiempo. Mostrate profesional.
         </p>
-      </div>
+      </!--div-->
 
       <div class="imagen-container">
         <img src="https://www.metroapp.site/metrologo.jpg" class="w-10rem" alt="Metro logo">
@@ -26,11 +26,13 @@
           <input type="text" id="password" class="form-control" [(ngModel)]="code" placeholder="Ingrese su codigo" autocomplete="current-password" style="font-size: 30px; text-align: center;">
           <button class="btn btn-primary" style="font-size: 16px; font-weight: bold; width: 100%; height: 50px; margin-top: 20px;" (click)="login()">ENTRAR</button>
 
-          <button type="button" class="btn btn-primary" style="font-size: 16px; font-weight: bold; width: 100%; height: 50px; margin-top: 20px;" data-bs-toggle="modal"  data-bs-target="#exampleModal">
-            REGISTRATE
-          </button>
+
 
         <button id="mercadoPagoButton" class="btn btn-primary" style="font-size: 16px; font-weight: bold; width: 100%; height: 50px; margin-top: 20px;" (click)="ocultarContenido()">PROBÁ EL SISTEMA</button>
+
+         <button type="button" class="btn btn-primary" style="font-size: 16px; font-weight: bold; width: 100%; height: 50px; margin-top: 20px;" data-bs-toggle="modal"  data-bs-target="#exampleModal">
+            REGISTRATE
+          </button>
 
         <button  type="button" class="btn btn-gradient" (click)="openCalculadora()" style="font-size: 16px; font-weight: bold; width: 100%; height: 50px; margin-top: 20px;" >CALCULADORA DE MATERIALES</button>
         <button type="button" class="btn btn-success" style="font-size: 16px; font-weight: bold; width: 100%; height: 50px; margin-top: 20px;" (click)="openWebsite()">Comprá un código por Whatsapp</button>
